--- a/todo-list/public/style.css
+++ b/todo-list/public/style.css
@@ -31,7 +31,7 @@ body {
     padding: 30px 20px 0;
     width: 70%;
     border-bottom: 1px solid #cecece;
-    font-family: Roboto, sans-serif;
+    font-family: Helvetica, sans-serif;
     font-weight: 100;
     font-size: 15px;
     color: #333333;
